--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=http://example.com">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "https://docs.google.com/presentation/d/1lcb9r7RsvSn1Vo3_RdoWPqAJZ2Cyght9cIXgfT6c-V4/edit?usp=sharing"
         </script>
         <title>Page Redirection</title>
     </head>
