--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://example.com'>link</a>.
+        If you are not redirected automatically, follow this <a href='https://docs.google.com/presentation/d/1lcb9r7RsvSn1Vo3_RdoWPqAJZ2Cyght9cIXgfT6c-V4/edit?usp=sharing'>link</a>.
     </body>
 </html>
